@@ -35,6 +35,8 @@ iconFileTypeBig_MP3=${iconsPath}music-big.gif
 iconFileTypeSmall_PDF=${iconsPath}pdf-small.gif
 iconFileTypeBig_PDF=${iconsPath}pdf-big.gif
 
+downloadingIconImage=${iconsPath}downloading.gif
+trayIconImage=${iconsPath}download.gif
 #Icons
 
 #Task panel
@@ -192,7 +194,7 @@ options.Action.shortDescription = Show User Options
 labelWorkingProgress.toolTipText=Working indicator
 
 showToolbar.Action.text=&Toolbar
-showToolbar.Action.accelerator = F9
+showToolbar.Action.accelerator = F11
 showToolbar.Action.shortDescription = Enable/disable Toolbar
 
 showStatusBar.Action.text=&Status Bar
